# kima

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  NOTES  README.md  metadata_tilde.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: 51Peg.yml  build-wheels.yml  cmake_versions.yml  pip-arm.yml  pip-editable.yml  pip-extensive.yml  pip-macos-namespace.yml  pip.yml  publish.yml  python-publish.yml  wheels.yml
code/: RNG.cpp  RNG.h  SamplerImpl.h
code/Distributions/: Cauchy.cpp  Cauchy.h  Exponential.cpp  Exponential.h  Fixed.h  Gaussian.cpp  Gaussian.h  Kumaraswamy.h  Laplace.h  LogUniform.h  Pareto.cpp  Pareto.h  Rayleigh.cpp  Uniform.h
doc/source/: conf.py  fenrir_datadriven.nblink
notebooks/: fenrir_datadriven.ipynb
spleaf/: __info__.py  __init__.py  cov.py  fenrir.py  libspleaf.c  libspleaf.h
src/kima/: AMDstability.cpp  AMDstability.h  ApodizedRVmodel.cpp  ApodizedRVmodel.h  ApodizedRVmodel.pyi  BINARIESmodel.cpp  BINARIESmodel.h  BINARIESmodel.pyi  ConditionalPrior.cpp  ConditionalPrior.h  Data.cpp  Data.h  Data.pyi  ETVmodel.cpp  ETVmodel.h  ETVmodel.pyi  ETmodel.cpp  ETmodel.h  ExponentialRayleighMixture.h  GAIAmodel.cpp  GAIAmodel.h  GAIAmodel.pyi  GP.cpp  GP.h  GPmodel.cpp  GPmodel.h  GPmodel.pyi  Gaia_model.cpp  Gaia_model.h  GaussianMixture.h  OutlierRVmodel.cpp  OutlierRVmodel.h  OutlierRVmodel.pyi  RVFWHMRHKmodel.cpp  RVFWHMRHKmodel.h  RVFWHMRHKmodel.pyi  RVFWHMmodel.cpp  RVFWHMmodel.h  RVFWHMmodel.pyi  RVGAIAmodel.cpp  (+40 more)
src/kima/distributions/: BivariateGaussian.cpp  BivariateGaussian.h  ExponentialRayleighMixture.cpp  ExponentialRayleighMixture.h  GaussianMixture.cpp  GaussianMixture.h  InverseGamma.cpp  InverseGamma.h  InverseMoment.cpp  InverseMoment.h  PowerLaw.cpp  PowerLaw.h  Sine.cpp  Sine.h
src/kima/examples/: __init__.py
src/kima/examples/BL2009/: __init__.py
src/kima/examples/CoRoT7/: __init__.py  corot7.txt
src/kima/examples/GaiaBH3/: Gaia_RVs_BH3.rdb  Gaia_astrometry_BH3.gaia  __init__.py
src/kima/examples/GaiaBH3/GAIA/: __init__.py  kima_model_setup.txt  levels.txt  sample_info.txt  sampler_state.txt  weights.txt
src/kima/examples/GaiaBH3/GAIA_free/: __init__.py  kima_model_setup.txt  levels.txt  sample_info.txt  sampler_state.txt  weights.txt
src/kima/examples/GaiaBH3/RVGAIA/: __init__.py  kima_model_setup.txt  levels.txt  sample_info.txt  sampler_state.txt  weights.txt
src/kima/examples/Kepler16/: Kepler16.rdb  __init__.py
src/kima/examples/TIC172900988/: SOPHIE.rv  __init__.py  kima_model_setup.txt  levels.txt  sampler_state.txt
src/kima/examples/_51Peg/: 51Peg.rv  __init__.py
src/kima/examples/multi_instruments/: __init__.py
src/kima/pykima/: GP.py  analysis.py  classic.py  cli.py  display.py  display_hooks.py  results.py  utils.py
src/spleaf/: __init__.py  term.py
tests/: ETVtest.txt  bad_file.txt  common.py  simulated1.txt  simulated2.txt  simulated3.txt  simulated4.txt  test_51Peg.py  test_basic.py  test_benchmarks.py  test_data.py  test_distributions.py  test_examples.py  test_fenrir.py  test_keplerian.py  test_kima_model_setup.py  test_known_object.py  test_results.py
